@@ -1,4 +1,4 @@
-momentuHMM 1.5.1 2020-03-02
+momentuHMM 1.5.1 2020-03-04
 -----------------
 CHANGES
 
@@ -7,6 +7,8 @@ CHANGES
 * in prepData, data streams can now be named 'step' and/or 'angle' when coordNames=NULL
 
 BUG FIXES
+
+* fitHMM and MIfitHMM argument 'retryFits' failed to randomly perturb parameter values in momentuHMM 1.5.0
 
 * 'toState' special formula did not account for non-default values in 'betaRef' argument
 
